# WiiUShell

./: CMakeLists.txt  IO.c  IO.h  README.md  draw.c  draw.h  main.c  menu.c  menu.h  video.h
meta/: meta.xml
src/: main.c  menu.c  theme.c  theme.h  video.c
